
Cabal-Version: >= 1.2
Build-Type: Simple
Name: yag

Version: 0.1
Synopsis: Git implementation
Description:
    Yet Another Git. Mainly for educational purposes.

Category: Development
License: GPL
License-File: UNLICENSE
Author: Tomas Carnecky
Maintainer: tomas.carnecky@gmail.com
Copyright: (c) 2011 Tomas "wereHamster" Carnecky <tomas.carnecky@gmail.com>
Homepage: https://github.com/wereHamster/yag

Executable yag
    Main-Is: yag.hs
    Build-Depends: 
        -- Always use explicit version ranges. I couldn't compile your library
        -- because, I got the wrong attoparsec version.
        base                     == 4.*
      , bytestring               == 0.9.*
      , base16-bytestring        == 0.1.1.*
      , directory                == 1.1.*
      , filepath
      , attoparsec               == 0.10.*
      , zlib
      , Crypto
      , time
      , datetime
      , old-locale
      , containers
